# BinaryNet.pytorch

./: .gitignore  Makefile  README.md  dataloader.py  main_binary.py  main_binary_hinge.py  main_mnist.py  pyproject.toml  utils.py
models/: __init__.py  binarized_modules.py  generic_bnn.py  resnet_binary.py
