[tool.poetry]
name = "binarynet.pytorch"
version = "0.1.0"
description = "Fork of the BNN repository from  itayhubara Itay Hubara, Gauthier-Clerc François, Ussama Zahid"
authors = ["Jerome Lenssen jerome.lenssen@rwth-aachen.de"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
pandas = "^1.3.0"
bokeh = "^2.3.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
